# bazel-paq

./: .gitattributes  .gitignore  Cargo.toml  LICENSE  MODULE.bazel  README.md  WORKSPACE  defs.bzl  deps.bzl  extensions.bzl
example/: .bazelrc  BUILD  MODULE.bazel  README.md  defs.bzl
example/configuration/: BUILD  config.json
example/infrastructure/: BUILD
example/infrastructure/templates/: prod-template.yaml
examples/: .gitignore  Cargo.toml  MODULE.bazel  README.md  defs.bzl
examples/configuration/: README.md
examples/directory/: BUILD
examples/directory/src/: log
examples/file/: BUILD
examples/infrastructure/: README.md
examples/infrastructure/templates/: dev-template.yaml  test-template.yaml
examples/python-service/: BUILD  README.md  pyproject.toml  requirements_lock.txt
examples/rust-command/: BUILD  Cargo.toml  README.md
infra/: Dockerfile
paq/: BUILD  defs.bzl
src/: main.rs
tests/: BUILD  assert_paq.sh  paq_aspect_graph_test.bzl  paq_aspect_hash_test.bzl
