module(
    name = "bazel_paq_example",
    version = "1.3.1",
)

# list dependencies
bazel_dep(name = "bazel_skylib", version = "1.8.2")
bazel_dep(name = "bazel_paq", version = "1.3.1")
bazel_dep(name = "rules_pkg", version = "1.1.0")
bazel_dep(name = "rules_python", version = "1.0.0")
bazel_dep(name = "rules_rust", version = "0.54.1")

# override the standard bazel_paq module fetch to use repository version
local_path_override(
    module_name = "bazel_paq",
    path = "..",
)

# setup python repo
python = use_extension("@rules_python//python/extensions:python.bzl", "python")
python.toolchain(python_version = "3.11")
use_repo(python, "python_3_11")

# setup rust repo
rust = use_extension("@rules_rust//rust:extensions.bzl", "rust")
rust.toolchain(edition = "2021", versions = ["1.82.0"])
use_repo(rust, "rust_toolchains")

# setup rust cargo crates repo
crate = use_extension("@rules_rust//crate_universe:extension.bzl", "crate")
crate.from_cargo(
    name = "crates",
    cargo_lockfile = "//:Cargo.lock",
    manifests = [
        "//:Cargo.toml",
        "//rust-command:Cargo.toml",
    ],
)
use_repo(crate, "crates")